[package]
name = "rustomata"
version = "0.1.0"
authors = ["Tobias Denkinger <tobias.denkinger@tu-dresden.de>"]
autobins = false
edition = "2018"

[workspace]
members = ["unique-heap", "search", "vecmultimap", "rustomata-grammar", "rustomata-util", "rustomata-automaton", "rustomata-ctf"]

[lib]
name = "rustomata"
path = "src/lib.rs"

[[bin]]
name = "rustomata"
path = "src/bin/main.rs"

[dependencies]
clap = "2.19"
log_domain = "0.4.0"
num-traits = "0.1.41"
bincode = "0.9"
flate2 = "1.0"
rustomata-grammar = { path = "rustomata-grammar" }
rustomata-util = { path = "rustomata-util" }
rustomata-automaton = { path = "rustomata-automaton" }
rustomata-ctf = { path = "rustomata-ctf" }
