[package]
name = "rustomata"
version = "0.1.0"
authors = ["Tobias Denkinger <tobias.denkinger@tu-dresden.de>"]
autobins = false
edition = "2018"

[workspace]
members = [
    # grammar libraries
    "rustomata-grammar",

    # automata library and coarse to fine parsing using automata
    "rustomata-automaton", "rustomata-ctf",

    # Chomsky-Schützenberger parsing
    "rustomata-choschu", "rustomata-choschu-cli",

    # util
    "rustomata-util", "vecmultimap", "search", "unique-heap",
]

[lib]
name = "rustomata"
path = "src/lib.rs"

[[bin]]
name = "rustomata"
path = "src/bin/main.rs"

[dependencies]
clap = "2.19"
log_domain = "0.4.0"
num-traits = "0.1.41"
bincode = "0.9"
flate2 = "1.0"
rustomata-grammar = { path = "rustomata-grammar", features = ["from-discodop", "from-string"] }
rustomata-util = { path = "rustomata-util" }
rustomata-automaton = { path = "rustomata-automaton", features = ["from-string", "from-grammar"] }
rustomata-ctf = { path = "rustomata-ctf" }
rustomata-choschu = { path = "rustomata-choschu", features = ["serialization"] }
