[package]
name = "rustomata-automaton"
version = "0.1.0"
authors = ["Thomas Ruprecht <thomas.ruprecht@tu-dresden.de>"]
edition = "2018"

[dependencies]
bit-set = "0.5.0"
integeriser = { git = "https://github.com/tud-fop/rust-integeriser.git" }
nom = "^3.2"
num-traits = "0.1.41"
rustomata-grammar = { path = "../rustomata-grammar" }
rustomata-util = { path = "../rustomata-util" }
search = { path = "../search" }