[package]
name = "rustomata-choschu"
version = "0.1.0"
authors = ["Thomas Ruprecht <thomas.ruprecht@tu-dresden.de>"]
edition = "2018"

[features]
serialization = ["serde", "rustomata-grammar/serialization"]

[dependencies]
integeriser = { git = "https://github.com/tud-fop/rust-integeriser.git" }
num-traits = "0.1.41"
fnv = "1.0"
unique-heap = { path = "../unique-heap", features = ["fnvtype"] }
search = { path = "../search" }
vecmultimap = { path = "../vecmultimap" }
rustomata-util = { path = "../rustomata-util" }
rustomata-grammar = { path = "../rustomata-grammar" }

# optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
log_domain = "0.4.0"