[package]
name = "rustomata-ctf"
version = "0.1.0"
authors = ["Thomas Ruprecht <thomas.ruprecht@tu-dresden.de>"]
edition = "2018"

[dependencies]
nom = "^3.2"
num-traits = "0.1.41"
rustomata-automaton = { path = "../rustomata-automaton" }
rustomata-util = { path = "../rustomata-util" }
search = { path = "../search" }